stopped using daemon thread due to it not working with the vps.